# course_work_4

./: .gitignore  README.md  pyproject.toml
src/: api.py  file_handler.py  main.py  vacancies.json  vacancy.py
tests/: test_vacancy_manager.py
