[tool.poetry]
name = "course-work-4"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
requests = "^2.32.3"
pytest = "^8.3.4"
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119
known_third_party = ["requests", "pandas"]

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"
